# wasm_simd_benchmark

./: Cargo.toml  README.md  index.js
.cargo/: config.toml
docs/: benchmark.js  index.html  index.js  package.json  utils.js  wasm_simd.d.ts  wasm_simd.js  wasm_simd_bg.wasm  wasm_simd_bg.wasm.d.ts
docs/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
pkg/: wasm_simd.d.ts  wasm_simd.js
src/: i32_add.rs  image_grayscale.rs  lib.rs  utils.rs  wasm_vec.rs
