cargo-features = ["edition2024"]

[package]
name = "wasm_simd"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-rayon = "1.3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
